--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,68 @@ a {
   color: #00d4ff;
   border-bottom: 2px solid #00d4ff;
 }
+
+/* === HERO SECTION STYLES === */
+
+.hero {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  gap: 2rem;
+  color: #fff;
+  padding-block: 4rem;
+}
+
+.hero__text {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.hero__headline {
+  font-size: 48px;
+  font-weight: 900;
+  color: #f9faf8;
+}
+
+.hero__description {
+  font-size: 18px;
+  color: #e5e7eb;
+}
+
+.hero__cta {
+  display: inline-block; /* keeps it from stretching accidentally. */
+  background-color: #00b8e6;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  text-align: center;
+  border: none;
+  border-radius: 50px;
+  padding: 1rem 2rem;
+}
+
+.hero__cta:hover {
+  background-color: #009fc9;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.hero__image {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.hero__image-img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 1rem;
+  border: 4px solid #00b8e6;
+  padding: 0.5rem;
+}
