--- a/css/style.css
+++ b/css/style.css
@@ -130,8 +130,48 @@ a {
   padding: 0.5rem;
 }
 
-/* === HERO SECTION STYLES === */
+/* === FEATURES SECTION STYLES === */
 
 .features {
   background: #fff;
+  padding-block: 4rem;
+}
+
+.features__headline {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 900;
+  line-height: 1.2;
+}
+
+.features__container {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+.features__item {
+  background-color: #e5e7eb;
+  border-radius: 10px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  text-align: center;
+  flex: 1 1 250px;
+}
+
+.features__icon img {
+  border: 4px solid #00b8e6;
+  border-radius: 10px;
+  width: 4rem;
+  height: auto;
+  padding: 5px;
+}
+
+.features__description {
+  font-size: 16px;
+  color: #666;
 }
