--- a/css/style.css
+++ b/css/style.css
@@ -96,20 +96,23 @@ a {
   color: #e5e7eb;
 }
 
-.hero__cta {
+.btn {
   display: inline-block; /* keeps it from stretching accidentally. */
-  background-color: #00b8e6;
   color: #fff;
   font-size: 1rem;
   font-weight: 500;
   letter-spacing: 0.5px;
   text-align: center;
-  border: none;
-  border-radius: 50px;
-  padding: 1rem 2rem;
+  border-radius: 10px;
+  padding: 0.5rem 2rem;
 }
 
-.hero__cta:hover {
+.btn--primary {
+  background-color: #00b8e6;
+  border: none;
+}
+
+.btn--primary:hover {
   background-color: #009fc9;
   cursor: pointer;
   transition: background-color 0.3s ease;
